# MEraEmu

./: LICENSE  README.md
MEraEmuCore/: .gitignore  Cargo.toml
MEraEmuCore/mee_bridge/: Cargo.toml
MEraEmuCore/mee_bridge/src/: lib.rs
MEraEmuCore/mee_cli/: Cargo.toml
MEraEmuCore/mee_engine/: Cargo.toml
MEraEmuCore/mee_engine/src/: lib.rs
MEraEmuCore/mee_engine/src/ast/: mod.rs
MEraEmuCore/mee_engine/src/codegen/: bytecode.rs
MEraEmuCore/mee_engine/src/parser/: mod.rs
MEraEmuCore/mee_engine/src/runtime/: mod.rs
MEraEmuCore/mee_engine/src/vm/: inst.rs  mod.rs
MEraEmuCore/mee_engine/tests/: test.rs
MEraEmuCore/mee_utils/: Cargo.toml
MEraEmuCore/mee_utils/src/: ascii.rs  interning.rs  io.rs  lib.rs  rcstr.rs  string.rs
MEraEmuCore/mee_utils/src/number/: formatting.rs
MEraEmuCore/src/: bytecode.rs  compiler.rs  csv.rs  engine.rs  lexer.rs  lib.rs  parser.rs  routine.rs  sys_src.ERB  types.rs  util.rs  vm.rs
MEraEmuCore/src/cst/: codegen.rs  interpret.rs  mod.rs  parser.rs
MEraEmuCore/src/util/: ascii.rs  dhashmap.rs  html.rs  interning.rs  io.rs  iter.rs  random.rs  rcstr.rs  syntax.rs
MEraEmuCore/src/v2/: ast.rs  codegen.rs  engine.rs  interpret.rs  intrinsics.rs  lexer.rs  mod.rs  parser.rs  routines.rs  savefs.rs  vm.rs
MEraEmuCore/src/v2/vm/: aarch64.rs  inst.rs  x86_64.rs
MEraEmuWin/: .gitignore  App.cpp  App.exe.manifest  App.h  App.idl  App.xaml  AppSettingsVM.cpp  AppSettingsVM.h  AppSettingsVM.idl  CanvasVirtualControl.cpp  CanvasVirtualControl.h  CanvasVirtualControl.idl  CanvasVirtualControl.xaml  ColorPickerButton.cpp  ColorPickerButton.h  ColorPickerButton.idl  ColorPickerButton.xaml  DPHelper.h  EngineControl.cpp  EngineControl.h  EngineControl.idl  EngineControl.xaml  FixTextBoxFlyout.cpp  FixTextBoxFlyout.h  FixTextBoxFlyout.idl  HybridCRT.props  MEraEmuWin.Win32.vcxproj  MEraEmuWin.sln  MEraEmuWin.vcxproj  MEraEmuWin.vcxproj.filters  MEraEngine.cpp  MEraEngine.hpp  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml  Package.appxmanifest  RelayCommand.cpp  RelayCommand.h  RelayCommand.idl  (+15 more)
MEraEmuWin/DevTools/: CodeEditControl.SciEdit.cpp  CodeEditControl.cpp  CodeEditControl.h  CodeEditControl.idl  CodeEditControl.xaml  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml  QuickActionItem.cpp  QuickActionItem.h  QuickActionItem.idl  SourcesFileTabItem.cpp  SourcesFileTabItem.h  SourcesFileTabItem.idl  SourcesTabBreakpointItem.cpp  SourcesTabBreakpointItem.h  SourcesTabBreakpointItem.idl  SourcesTabCallStackTabItem.cpp  SourcesTabCallStackTabItem.h  SourcesTabCallStackTabItem.idl  SourcesTabWatchTabItem.cpp  SourcesTabWatchTabItem.h  SourcesTabWatchTabItem.idl
MEraEmuWin/Settings/: DisplayPage.cpp  DisplayPage.h  DisplayPage.idl  DisplayPage.xaml  GamePage.cpp  GamePage.h  GamePage.idl  GamePage.xaml  GeneralPage.cpp  GeneralPage.h  GeneralPage.idl  GeneralPage.xaml  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml
docs/: Architectures.md  Building.md
