[package]
name = "MEraEmuCore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.79"
csv = "1.3.0"
cxx = "1.0.115"
modular-bitfield = "0.11.2"
ptr-union = "2.2.2"
unicase = "2.7.0"
atoi_simd = "0.15.6"
indoc = "2"
num-traits = "0.2.17"
num-derive = "0.4.1"
either = "1.9.0"
thiserror = "1.0.56"
rand = "0.8.5"
smallvec = "1.13.1"
# inkwell = { version = "0.4.0", features = ["llvm17-0"] }
walkdir = "2.4.0"
memchr = "2.7.1"
unicode-width = "0.1.11"
phf = { version = "0.11", features = ["macros"] }
regex = "1.10.3"
once_cell = "1.19.0"
text_io = "0.1.12"
