[package]
name = "MEraEmuCore"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
# cpp_build = "0.5"
# cxx-build = "1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "generate-headers"
required-features = ["headers"]

[profile.release]
debug = true
lto = true

[dependencies]
anyhow = "1.0.79"
csv = "1.3.0"
cxx = "1.0.115"
modular-bitfield = "0.11.2"
ptr-union = "2.2.2"
unicase = "2.7.0"
atoi_simd = "0.15.6"
indoc = "2"
num-traits = "0.2.17"
num-derive = "0.4.1"
either = "1.9.0"
thiserror = "1.0.56"
rand = "0.8.5"
smallvec = "1.13.1"
# inkwell = { version = "0.4.0", features = ["llvm17-0"] }
walkdir = "2.4.0"
memchr = "2.7.1"
unicode-width = "0.1.11"
phf = { version = "0.11", features = ["macros"] }
regex = "1.10.3"
once_cell = "1.19.0"
text_io = "0.1.12"
colored = "2.1.0"
yoke = { version = "0.7.3", features = ["derive"] }
full2half = "0.1.0"
hashbrown = "0.14.3"
memory-stats = "1.1.0"
size = "0.4.1"
muldiv = "1.0.1"
nanohtml2text = "0.1.4"
num-integer = "0.1.46"
chrono = "0.4.35"
itertools = "0.12.1"
# cpp = "0.5.9"
safer-ffi = { version = "0.1.5", features = ["dyn-traits"] }
arcstr = "1.1.5"
rclite = "0.2.4"
byteorder = "1.5.0"
html-escape = "0.2.13"
htmlize = "1.0.5"
itoa = "1.0.11"
mimalloc = "0.1.39"

[features]
headers = ["safer-ffi/headers"]
