[package]
name = "MEraEmuCore"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
# cpp_build = "0.5"
# cxx-build = "1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
# crate-type = ["cdylib"]

[[bin]]
name = "generate-headers"
required-features = ["headers"]

[profile.release]
debug = true
#lto = true
lto = "thin"

[dependencies]
anyhow = "1.0.79"
csv = "1.3.0"
#cxx = "1.0.115"
modular-bitfield = "0.11.2"
ptr-union = "2.2.2"
unicase = "2.7.0"
atoi_simd = "0.16.0"
indoc = "2"
num-traits = "0.2.17"
num-derive = "0.4.1"
either = "1.9.0"
thiserror = "1.0.56"
rand = "0.8.5"
smallvec = { version = "1.13.1", features = ["serde"] }
# inkwell = { version = "0.4.0", features = ["llvm17-0"] }
walkdir = "2.4.0"
memchr = "2.7.1"
unicode-width = "0.1.11"
phf = { version = "0.11", features = ["macros"] }
regex = "1.10.3"
once_cell = "1.19.0"
text_io = "0.1.12"
colored = "2.1.0"
yoke = { version = "0.7.3", features = ["derive"] }
full2half = "0.1.0"
hashbrown = "0.14.3"
memory-stats = "1.1.0"
size = "0.4.1"
muldiv = "1.0.1"
nanohtml2text = "0.1.4"
num-integer = "0.1.46"
chrono = "0.4.35"
itertools = "0.13.0"
# cpp = "0.5.9"
safer-ffi = { version = "0.1.5", features = ["dyn-traits"] }
arcstr = "1.1.5"
rclite = "0.2.4"
byteorder = "1.5.0"
html-escape = "0.2.13"
htmlize = "1.0.5"
itoa = "1.0.11"
mimalloc = "0.1.39"
ptr_iter = "0.1.1"
lru = "0.12.3"
bstr = "1.10.0"
cstree = { git = "https://github.com/apkipa/cstree", branch = "enhance", features = [
    "derive",
    "lasso_compat",
    "multi_threaded_interning",
    "serde",
] }
polonius-the-crab = "0.4.1"
enumset = "1.1.5"
num-ordinal = "0.2.0"
lasso = { version = "0.7.3", features = ["ahasher"] }
stacker = "0.1.17"
arrayvec = "0.7.6"
tinyvec = "1.8.0"
rustc-hash = "2"
indexmap = "2.5.0"
paste = "1.0.15"
strum = { version = "0.26.3", features = ["derive"] }
scopeguard = "1.2.0"
dhat = "0.3.3"
lz4_flex = { version = "0.11.3", default-features = false, features = [
    "frame",
] }
bytemuck = "1.19.0"
binrw = "0.14.1"
serde = { version = "1.0.210", features = ["derive", "rc"] }
bidiff = "1.0.0"
bio = "2.0.3"
similar = "2.6.0"
bumpalo = "3.16.0"
scc = "2.2.2"
sinter = "0.1.1"
rayon = "1.10.0"
pariter = "0.5.1"
simdutf8 = "0.1.5"
lending-iterator = "0.1.7"
jsonrpsee = { version = "0.24.7", features = ["server-core"] }
easy-jsonrpc = { git = "https://github.com/apkipa/easy-jsonrpc" }
serde_json = "1.0.132"
sublime_fuzzy = "0.7.0"
sha2 = "0.10.8"
# snmalloc-rs = "0.3.5"
# rpmalloc = "0.2.2"

[features]
default = []
headers = ["safer-ffi/headers"]
dhat-heap = []
dhat-ad-hoc = []
legacy_v1 = []
