[package]
name = "mee_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
smallvec = "1.15.0"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
lasso = "0.7.3"
rustc-hash = "2.1.1"
hashbrown = "0.15.3"
wide = "0.7.32"
indexmap = "2.9.0"
binrw = "0.15.0"
byteorder = "1.5.0"
itertools = "0.14.0"
